--- a/project/package.json
+++ b/project/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.7",
     "history": "^4.10.1",
+    "nanoid": "^3.1.30",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.2",
