--- a/project/package.json
+++ b/project/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.21.1",
     "dayjs": "^1.10.7",
     "history": "^4.10.1",
+    "leaflet": "^1.7.1",
     "nanoid": "^3.1.30",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@jedmao/redux-mock-store": "^3.0.5",
+    "@types/leaflet": "^1.7.5",
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^11.2.0",
     "@testing-library/react-hooks": "^5.1.0",
